--- a/source/_posts/2020-05-10-worlds-group-2020.md
+++ b/source/_posts/2020-05-10-worlds-group-2020.md
@@ -2,8 +2,8 @@
 template: post.html
 title: 2020 Worlds Group Advancement
 date: 2020-10-5
-permalink: /worlds-group-2020
-shareimg:
+permalink: \worlds-group-2020
+shareimg: somthing.jpg
 ---
 
 The second half of League of Legends' World Group Stage starts tomorrow morning! Each team will play the other three teams in their group once more. The best two teams in each group advance to the quarterfinals.
